force-app/main/default/objects/Outcomes_Application_Commissioner__c/Outcomes_Application_Commissioner__c.object-meta.xml
<CustomObject>
    <label>Outcomes Application Commissioner</label>
    <nameField>
        <label>Outcome Application Commissioner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcomes Application Commissioners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>