force-app/main/default/objects/Outcomes_Application_Commissioner__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Outcomes Application Commissioners</relationshipLabel>
    <relationshipName>Outcomes_Application_Commissioners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>