force-app/main/default/objects/Outcomes_Application_Commissioner__c/fields/Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Commissioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commissioner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>OutComes_Application_Commissioner2</relationshipName>
    <type>Lookup</type>
</CustomField>