force-app/main/default/objects/Outcomes_Application_Commissioner__c/fields/Marked_as_Complete__c.field-meta.xml
<CustomField>
    <fullName>Marked_as_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked as Complete</label>
    <type>Checkbox</type>
</CustomField>